// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RepostersOverlay - Snapshots > matches snapshot for dialog variant when closed 1`] = `null`;

exports[`RepostersOverlay - Snapshots > matches snapshot for dialog variant when open 1`] = `
<div
  aria-labelledby="radix-normalized"
  class="relative z-50 grid duration-200 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 m-4 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] gap-6 overflow-y-auto rounded-lg border bg-background p-6 shadow-lg sm:rounded-xl sm:p-8 max-w-md"
  data-cy="dialog-content"
  data-slot="dialog-content"
  data-state="open"
  data-testid="dialog-content"
  id="radix-normalized"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-col gap-1.5 pr-6"
    data-slot="dialog-header"
    data-testid="dialog-header"
  >
    <h2
      class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333]"
      data-slot="dialog-title"
      data-testid="dialog-title"
      id="radix-normalized"
    >
      Reposters
    </h2>
  </div>
  <div
    class="border-0 p-0"
    data-count="2"
    data-testid="reposter-expanded-list"
  >
    User List (
    2
     users)
  </div>
  <button
    class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
    data-slot="dialog-close"
    data-testid="dialog-close"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
    <span
      class="sr-only"
    >
      Close
    </span>
  </button>
</div>
`;

exports[`RepostersOverlay - Snapshots > matches snapshot for sheet variant when closed 1`] = `null`;

exports[`RepostersOverlay - Snapshots > matches snapshot for sheet variant when open 1`] = `
<div
  aria-describedby="radix-normalized"
  aria-labelledby="radix-normalized"
  class="fixed z-50 gap-4 bg-background p-6 shadow-lg transition ease-in-out data-[state=closed]:animate-out data-[state=closed]:duration-300 data-[state=open]:animate-in data-[state=open]:duration-500 inset-x-0 bottom-0 border-t data-[state=closed]:slide-out-to-bottom data-[state=open]:slide-in-from-bottom rounded-t-2xl pb-8"
  data-state="open"
  id="radix-normalized"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-col space-y-2 text-center sm:text-left mb-4"
  >
    <h2
      class="text-lg font-semibold text-foreground"
      id="radix-normalized"
    >
      Reposters
    </h2>
  </div>
  <div
    class="max-w-full border-0 p-0"
    data-count="2"
    data-testid="reposter-expanded-list"
  >
    User List (
    2
     users)
  </div>
  <button
    class="absolute top-4 right-4 rounded-sm opacity-70 ring-offset-background transition-opacity hover:opacity-100 focus:ring-2 focus:ring-ring focus:ring-offset-2 focus:outline-none disabled:pointer-events-none data-[state=open]:bg-secondary"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
    <span
      class="sr-only"
    >
      Close
    </span>
  </button>
</div>
`;
